# app/Http/Controllers/API/JewelController.php
@@ -12,7 +12,7 @@ use OpenApi\Annotations as OA;
 /**
  * Class Jewel.
  *
- * @author JamesWL <james.422023009@civitas.ukrida.ac.id>
+ * @type JamesWL <james.422023009@civitas.ukrida.ac.id>
 */
 class JewelController extends Controller
 {
@@ -26,12 +26,105 @@ class JewelController extends Controller
      *         response=200,
      *         description="successful",
      *         @OA\JsonContent()
-     *     )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_page",
+     *         in="query",
+     *         description="current page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=1
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_limit",
+     *         in="query",
+     *         description="max item in a page",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *             format="int64",
+     *             example=10
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_search",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_type",
+     *         in="query",
+     *         description="search by type like ruby, diamond, etc",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="_sort_by",
+     *         in="query",
+     *         description="word to search",
+     *         required=false,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="latest"
+     *         )
+     *     ),
      * )
      */
-    public function index()
+    public function index(Request $request)
     {
-        return Jewel::get();
+        try {
+            $data['filter']       = $request->all();
+            $page                 = $data['filter']['_page']  = (@$data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit                = $data['filter']['_limit'] = (@$data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset               = ($page?($page-1)*$limit:0);
+            $data['products']     = Jewel::whereRaw('1 = 1');
+            
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw('(LOWER(name) LIKE "%'.strtolower($request->get('_search')).'%")');
+            }
+            if($request->get('_type')){
+                $data['products'] = $data['products']->whereRaw('LOWER(type) = "'.strtolower($request->get('_type')).'"');
+            }
+            if($request->get('_sort_by')){
+            switch ($request->get('_sort_by')) {
+                default:
+                case 'latest_added':
+                $data['products'] = $data['products']->orderBy('created_at','DESC');
+                break;
+                case 'name_asc':
+                $data['products'] = $data['products']->orderBy('name','ASC');
+                break;
+                case 'name_desc':
+                $data['products'] = $data['products']->orderBy('name','DESC');
+                break;
+                case 'price_asc':
+                $data['products'] = $data['products']->orderBy('price','ASC');
+                break;
+                case 'price_desc':
+                $data['products'] = $data['products']->orderBy('price','DESC');
+                break;
+            }
+            }
+            $data['products_count_total']   = $data['products']->count();
+            $data['products']               = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']       = $data['products']->toSql();
+            $data['products']               = $data['products']->get();
+            $data['products_count_start']   = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1);
+            $data['products_count_end']     = ($data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']));
+           return response()->json($data, 200);
+
+        } catch(\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }
     }
 
     /**
